<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:background="@drawable/error_login_background"
    android:paddingHorizontal="20dp"
    android:paddingVertical="40dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/tee"
        android:text="@string/logout__title"
        android:textColor="@color/colorSecondary"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/caption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/just_sans_regular"
        android:gravity="center"
        android:text="@string/logout__caption"
        android:textColor="@color/darkGrayText"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/action_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/action_logout"
        style="@style/ButtonStyle"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/just_sans_regular"
        android:text="@string/logout__submit_action"
        android:textSize="14sp"
        app:cornerRadius="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/action_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caption" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/action_cancel"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/just_sans_regular"
        android:gravity="center"
        android:text="@string/logout__cancel_action"
        android:textAllCaps="false"
        android:textColor="@color/colorSecondary"
        android:textSize="14sp"
        app:cornerRadius="14dp"
        app:layout_constraintBottom_toBottomOf="@+id/action_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/action_logout"
        app:layout_constraintTop_toTopOf="@+id/action_logout"
        app:strokeColor="@color/colorSecondary"
        app:strokeWidth="2dp" />
</androidx.constraintlayout.widget.ConstraintLayout>